testdata/baselines/reference/conformance/jsdocParamTagNoName.errors.txt
a.js(5,14): error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.


==== a.js (1 errors) ====
    /**
     * @param {(x: string) => string}
     */
    function foo(f) {
        return f(123);
                 ~~~
!!! error TS2345: Argument of type 'number' is not assignable to parameter of type 'string'.
    }
    